--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- Top container -->
 <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
+   <span class="w3-bar-item w3-left"><img src="imagenes/geoinnova.jpg" class="w3-margin-left" style="width:100px;height:50px"></span>
   <span class="w3-bar-item w3-right"><img src="imagenes/aerogenerador.jpg" class="w3-circle w3-margin-right" style="width:40px"></span>
    <span class="w3-bar-item w3-right"><h3>Actividad Final de Curso</h3></span>
 </div>
@@ -56,7 +57,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <h3>575 ha</h3>
         </div>
         <div class="w3-clear"></div>
-        <h4><strong>Extensión</strong></h4>
+        <h4>Extensión</h4>
       </div>
     </div>
     <div class="w3-quarter">
@@ -66,7 +67,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <h3>76</h3>
         </div>
         <div class="w3-clear"></div>
-        <h4><strong>Aerogeneradores</strong></h4>
+        <h4>Aerogeneradores</h4>
       </div>
     </div>
     <div class="w3-quarter">
@@ -76,7 +77,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <h3>8,5 m/s</h3>
         </div>
         <div class="w3-clear"></div>
-        <h4><strong>Velocidad viento</strong></h4>
+        <h4>Velocidad viento</h4>
       </div>
     </div>
     <div class="w3-quarter">
@@ -86,7 +87,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <h3>100 Mwh</h3> 
         </div>
         <div class="w3-clear"></div>
-        <h4><strong>Capacidad instalada</strong></h4>
+        <h4>Capacidad instalada</h4>
       </div>
     </div>
   </div>
@@ -97,8 +98,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <h5><strong>Localización</strong></h5>
 		  <!-- Mapa ArcGis On line incrustado -->
         <div class="embed-container">
-          <iframe width="600" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
-		  title="Parques eolicos en Venezuela" src="//www.arcgis.com/apps/Embed/index.html?webmap=137bbb098de9473c95512a1648f1f72b&extent=-73.4274,6.0269,-59.5956,13.1715&zoom=true&previewImage=false&scale=false&disable_scroll=true&theme=light">
+          <iframe width="600" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Parques eolicos en Venezuela" src="//www.arcgis.com/apps/Embed/index.html?webmap=137bbb098de9473c95512a1648f1f72b&extent=-73.4274,6.0269,-59.5956,13.1715&zoom=true&previewImage=false&scale=false&disable_scroll=true&theme=light">
          </iframe>
         </div>
       </div>
@@ -226,30 +226,37 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div>
       <div class="w3-col m10 w3-container">
         <h4>Jorge Viloria <span class="w3-opacity w3-medium">Sep 29, 2014, 9:12 PM</span></h4>
-        <p>Especialista en SIG, Catastro y Cartografía, redactor del curso Geodatos en aplicaciones web para Geoinnova. El diseño esta basado en plantilla gratuita ofrecida por la W3C.</p><br>
+        <p>Especialista en SIG, Catastro, Cartografía y Tutor de cursos en línea.</p><br>
       </div>
+	  <div class="w3-col s8 w3-bar">
+      <span><strong>Mis contactos</strong></span><br>
+      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i></a>
+      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook"></i></a>
+      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-github"></i></a>
+	  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
+    </div>
     </div>
   <br>
-  <div class="w3-container w3-dark-grey w3-padding-32">
+  <div class="w3-container w3-dark-grey w3-padding-small">
     <div class="w3-row">
+	<h3>Curso: Geodatos en aplicaciones web</h3>
       <div class="w3-container w3-third">
-        <h5 class="w3-bottombar w3-border-green">Demographic</h5>
-        <p>Language</p>
-        <p>Country</p>
-        <p>City</p>
+        <h5 class="w3-bottombar w3-border-green">Colaboradores</h5>
+        <p>Geoinnova</p>
+        <p>International Renewable Energy Agency </p>
+		<p>SolarisGis</p>
       </div>
       <div class="w3-container w3-third">
-        <h5 class="w3-bottombar w3-border-red">System</h5>
-        <p>Browser</p>
-        <p>OS</p>
-        <p>More</p>
+        <h5 class="w3-bottombar w3-border-red">Sistemas y aplicaciones</h5>
+        <p>Navegador Mozilla Firefox</p>
+        <p>OpenStreeMap</p>
+        <p>GeoWE</p>
       </div>
       <div class="w3-container w3-third">
-        <h5 class="w3-bottombar w3-border-orange">Target</h5>
-        <p>Users</p>
-        <p>Active</p>
-        <p>Geo</p>
-        <p>Interests</p>
+        <h5 class="w3-bottombar w3-border-orange">Dirigido a</h5>
+        <p>Usuarios SIG</p>
+        <p>Profesionales</p>
+        <p>Publico interesado</p>
       </div>
     </div>
   </div>
