--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>Parque eólico Paraguaná</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="css\w3.css">
 <link rel="stylesheet" href="css\mapa_esri.css">
 <link rel="stylesheet" href="fonts\Raleway\Raleway.css">
@@ -14,9 +15,9 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- Top container -->
 <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
-   <span class="w3-bar-item w3-left"><img src="imagenes/geoinnova.jpg" class="w3-margin-left" style="width:100px;height:50px"></span>
+   <span class="w3-bar-item w3-left"><img src="imagenes/geoinnova.jpg" class="w3-margin-left" style="width:180px;height:55px"></span>
   <span class="w3-bar-item w3-right"><img src="imagenes/aerogenerador.jpg" class="w3-circle w3-margin-right" style="width:40px"></span>
-   <span class="w3-bar-item w3-right"><h3>Actividad Final de Curso</h3></span>
+   <span class="w3-bar-item w3-right"><h3><strong>Actividad Final de Curso</strong></h3></span>
 </div>
   
 <!-- Sidebar/menu -->
