--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
-<title>Parque eólico Paraguaná</title>
+<title>Parque Paraguaná</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -15,27 +15,29 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- Top container -->
 <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
-   <span class="w3-bar-item w3-left"><img src="imagenes/geoinnova.jpg" class="w3-margin-left" style="width:180px;height:55px"></span>
-  <span class="w3-bar-item w3-right"><img src="imagenes/aerogenerador.jpg" class="w3-circle w3-margin-right" style="width:40px"></span>
-   <span class="w3-bar-item w3-right"><h3><strong>Actividad Final de Curso</strong></h3></span>
+   <span class="w3-bar-item w3-left"><img src="imagenes/geoinnova.jpg" class="w3-margin-left" style="width:180px;height:70px"></span>
+  <span class="w3-bar-item w3-right"><img src="imagenes/aerogenerador.jpg" class="w3-circle w3-margin-right" style="width:55px"></span>
+   <span class="w3-bar-item w3-right"><h1>Actividad Final de Curso</h1></span>
 </div>
-  
+<hr>
+ 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   <div class="w3-container w3-row">
     <div class="w3-col s8 w3-bar">
-      <span><h3>Parque eólicio <strong>Paraguaná</h3></strong></span>
+      <span><h3>Parque eólico</h3<strong><h2>Paraguaná</h2></strong></span>
     </div>
   </div>
   <hr>
+  
   <div class="w3-container">
     <h4><strong>Evaluación del Proyecto</strong></h4>
   </div>
-  <div class="w3-bar-block">
-    <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-globe fa-fw"></i>Datos generales</a>
-    <a href="html/eolico.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-lightbulb-o fa-fw"></i>Analisis eólico</a>
-    <a href="html/solar.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-sun-o fa-fw"></i>Analisis solar</a>
-	<a href="html/conclusion.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-legal fa-fw"></i>Conclusiones</a>
+  <div class="w3-bar-block w3-medium">
+    <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-globe fa-fw"></i> Datos generales</a>
+    <a href="html/eolico.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-lightbulb-o fa-fw"></i> Analisis eólico</a>
+    <a href="html/solar.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-sun-o fa-fw"></i> Analisis solar</a>
+	<a href="html/conclusion.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-legal fa-fw"></i> Conclusiones</a>
   </div>
 </nav>
 
@@ -43,11 +45,11 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:300px;margin-top:43px;">
+<div class="w3-main" style="margin-left:300px;margin-top:80px;">
 
   <!-- Header -->
   <header class="w3-container" style="padding-top:22px">
-    <h4><b><i class="fa fa-pencil-square-o"></i> Datos generales</b></h4>
+    <h3><b><i class="fa fa-pencil-square-o"></i> Datos generales</b></h3>
   </header>
 
   <div class="w3-row-padding w3-margin-bottom">
@@ -103,6 +105,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
          </iframe>
         </div>
       </div>
+	  
       <div class="w3-twothird">
         <h5><strong>Tabla comparativa</strong></h5>
         <table class="w3-table w3-striped w3-white">
@@ -149,10 +152,24 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 			<td><i>Sucre</i></td>
           </tr>
          </table>
-      </div>
+      </div><br>
     </div>
+	<div class="w3-medium w3-panel w3-margin-right">
+	 <p>Datos suministrados del <i>Plan Energético Nacional</i> implementado por la <i>Corporación Eléctrica Nacional</i> (Corpoelec, 2010), para el aprovechaniento de la energía eólica en Venezuela.</p> 
+	 <p>Comprende un plan ambicioso de construcción de cinco (5) proyectos emblemeticos de parques eólicos, para la generación eléctrica mediante el aprovechmiento del potencial eólico que tiene el país.</p>
+   </div>
   </div>
   <hr>
+  
+     <div class="w3-container">
+     <h5><strong>Revisión del proyecto</strong></h5>
+	<div class="w3-medium w3-panel w3-margin-right">
+	 <p>El parque eólico Paraguaná tan solo generó un poco más del 30% de las estimaciones realizadas en el estudio de factibilidad del proyecto. Muchos expertos indicaron que el bajo rendimiento se debió principalmente a la sobre estimación del potencial eólico del área de ubicación, sumado al abandono y las posteriores paralizaciones de los aerogeneradores por falta de mantenimiento.</p>
+     <p>Una de las fortalezas de los SIG es su potencial de análisis de geodatos de diferentes fuentes, para soportar una eficiente toma de decisiones. En este caso podemos utilizar los geodatos disponibles en la web y sus aplicaciones, para realizar una revisión de las cifras dadas por el estudio de factibilidad del proyecto, para recomendar accesiones que mejoren el rendimiento del parque eólico.</p>
+     <p>Debemos aprovechar esta oportunidad para definir el potencial solar que tiene la región, para sustentar una propuesta de cambio de alcance, que lo convierta en un parque de energía mixta (eólica y solar) que permita elevar su potencial energético sin elevar la inversión.</p>
+  </div>
+  </div><br>
+  
   <div class="w3-container">
     <h5><strong>Situación actual. Proyectos de energía alternativa</strong></h5>
     <p>Generación</p>
@@ -174,11 +191,17 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-grey">
       <div class="w3-container w3-center w3-padding w3-blue" style="width:1%">1%</div>
 	</div>
+  </div>
   <hr>
 
   <div class="w3-container">
     <h5><strong>Top 5. Capacidad instalada</strong></h5>
     <table class="w3-table w3-striped w3-bordered w3-border w3-hoverable w3-white">
+	  <tr>
+        <td><strong>Paises</strong></td>
+		<td><strong>Generación (Mwh)</strong></td>
+        <td><strong>Participación</strong></td>
+      </tr>
       <tr>
         <td>China</td>
 		<td>188.392 Mwh</td>
@@ -208,12 +231,15 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <button class="w3-button w3-dark-grey"><a href="https://gwec.net/" target="_blank"><strong>Fuente</strong></a>  <i class="fa fa-arrow-right"></i></button>
   </div>
   <hr>
+  
   <div class="w3-container">
     <h5><strong>Gráfica</strong></h5>
     <ul class="w3-ul w3-card-4 w3-white">
       <li class="w3-padding-16">
-        <img src="imagenes/capacidadmundial.png" class="w3-margin-center" style="width:630px;height:500px">
-		<span class="w3-medium"><p>Corresponde al potencial eólico instalado en el mundo hasta el 2017, según cifras publicadas por la Global Wind Energy Council (GWEC ).</p></span>
+        <img src="imagenes/capacidadmundial.png" class=".w3-margin-right" style="width:630px;height:500px">
+		<div class="w3-medium w3-panel w3-margin-right">
+		<p>Corresponde al potencial eólico instalado en el mundo hasta el 2017, cifras publicadas por la Global Wind Energy Council (GWEC ).</p>
+		</div>
       </li>
     </ul>
   </div>
@@ -237,7 +263,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
     </div>
     </div>
-  <br>
+  </div><br>
+	
   <div class="w3-container w3-dark-grey w3-padding-small">
     <div class="w3-row">
 	<h3>Curso: Geodatos en aplicaciones web</h3>
