--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   <div class="w3-container w3-row">
     <div class="w3-col s8 w3-bar">
-      <span><h3>Parque eólico</h3<strong><h2>Paraguaná</h2></strong></span>
+      <span><h3>Parque eólico</h3> <h2><b>Paraguaná</b></h2></span>
     </div>
   </div>
   <hr>
   
   <div class="w3-container">
-    <h4><strong>Evaluación del Proyecto</strong></h4>
+    <h4><b>Evaluación del Proyecto</b></h4>
   </div>
   <div class="w3-bar-block w3-medium">
     <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-globe fa-fw"></i> Datos generales</a>
@@ -97,58 +97,59 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-panel">
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-third">
-        <h5><strong>Localización</strong></h5>
+        <h5><b>Localización</b></h5>
 		  <!-- Mapa ArcGis On line incrustado -->
-        <div class="embed-container">
-          <iframe width="600" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Parques eolicos en Venezuela" src="//www.arcgis.com/apps/Embed/index.html?webmap=137bbb098de9473c95512a1648f1f72b&extent=-73.4274,6.0269,-59.5956,13.1715&zoom=true&previewImage=false&scale=false&disable_scroll=true&theme=light">
-         </iframe>
-        </div>
-      </div>
+      <div class="embed-container">
+	     <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Ubicacion Parque Eolico Paraguana" 
+		   src="//www.arcgis.com/apps/Embed/index.html?webmap=ef513e40de2549f68e6b6ad94a626736&extent=-70.2767,11.7744,-70.1926,11.8408&zoom=true&previewImage=false&scale=false&disable_scroll=true&theme=light">
+		 </iframe>
+	   </div>
+     </div>
 	  
       <div class="w3-twothird">
-        <h5><strong>Tabla comparativa</strong></h5>
-        <table class="w3-table w3-striped w3-white">
+        <h5><b>Tabla comparativa</b></h5>
+        <table class="w3-table w3-striped w3-bordered w3-border w3-white">
           <tr>
 		    <td></td>
-            <td><strong>Proyecto</strong></td>
-            <td><i><strong>Extensión</strong></i></td>
-			<td><i><strong>Capacidad</strong></i></td>
-			<td><i><strong>Ubicación</strong></i></td>
+            <td><b>Proyecto</b></td>
+            <td><b>Extensión</b></td>
+			<td><b>Capacidad</b></td>
+			<td><b>Ubicación</b></td>
 		  </tr>	
 		  <tr>
             <td><i class="fa fa-check-square-o w3-text-blue w3-large"></i></td>
             <td>Paraguaná</td>
-            <td><i>575 ha</i></td>
-			<td><i>100 Mwh</i></td>
-			<td><i>Falcón</i></td>
+            <td>575 ha</td>
+			<td>100 Mwh</td>
+			<td>Falcón</td>
           </tr>
           <tr>
             <td><i class="fa fa-check-square-o w3-text-red w3-large"></i></td>
             <td>La Guajira</td>
-			<td><i>600 ha</i></td>
-			<td><i>150 Mwh</i></td>
-            <td><i>Zulia</i></td>
+			<td>600 ha</td>
+			<td>150 Mwh</td>
+            <td>Zulia</td>
           </tr>
           <tr>
             <td><i class="fa fa-check-square-o w3-text-yellow w3-large"></i></td>
             <td>Margarita</td>
-            <td><i>300 ha</i></td>
-			<td><i>50 Mwh</i></td>
-			<td><i>Nueva Esparta</i></td>
+            <td>300 ha</td>
+			<td>50 Mwh</td>
+			<td>Nueva Esparta</td>
           </tr>
           <tr>
             <td><i class="fa fa-check-square-o w3-text-green w3-large"></i></td>
             <td>Coche</td>
-            <td><i>180 ha</i></td>
-			<td><i>25 Mwh</i></td>
-			<td><i>Nueva Esparta</i></td>
+            <td>180 ha</td>
+			<td>25 Mwh</td>
+			<td>Nueva Esparta</td>
           </tr>
           <tr>
             <td><i class="fa fa-check-square-o w3-text-pink w3-large"></i></td>
             <td>Araya</td>
-            <td><i>120 ha</i></td>
-			<td><i>15 Mwh</i></td>
-			<td><i>Sucre</i></td>
+            <td>120 ha</td>
+			<td>15 Mwh</td>
+			<td>Sucre</td>
           </tr>
          </table>
       </div><br>
@@ -161,7 +162,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <hr>
   
      <div class="w3-container">
-     <h5><strong>Revisión del proyecto</strong></h5>
+     <h5><b>Revisión del proyecto</b></h5>
 	<div class="w3-medium w3-panel w3-margin-right">
 	 <p>El parque eólico Paraguaná tan solo generó un poco más del 30% de las estimaciones realizadas en el estudio de factibilidad del proyecto. Muchos expertos indicaron que el bajo rendimiento se debió principalmente a la sobre estimación del potencial eólico del área de ubicación, sumado al abandono y las posteriores paralizaciones de los aerogeneradores por falta de mantenimiento.</p>
      <p>Una de las fortalezas de los SIG es su potencial de análisis de geodatos de diferentes fuentes, para soportar una eficiente toma de decisiones. En este caso podemos utilizar los geodatos disponibles en la web y sus aplicaciones, para realizar una revisión de las cifras dadas por el estudio de factibilidad del proyecto, para recomendar accesiones que mejoren el rendimiento del parque eólico.</p>
@@ -170,7 +171,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div><br>
   
   <div class="w3-container">
-    <h5><strong>Situación actual. Proyectos de energía alternativa</strong></h5>
+    <h5><b>Situación actual. Proyectos de energía alternativa</b></h5>
     <p>Generación</p>
     <div class="w3-grey">
       <div class="w3-container w3-center w3-padding w3-green" style="width:33%">+33%</div>
@@ -193,13 +194,13 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
   <hr>
 
-  <div class="w3-container">
-    <h5><strong>Top 5. Capacidad instalada</strong></h5>
-    <table class="w3-table w3-striped w3-bordered w3-border w3-hoverable w3-white">
+  <div class="w3-panel">
+    <h5><b>Top 5. Capacidad instalada</b></h5>
+    <table class="w3-table w3-striped w3-bordered w3-border w3-white">
 	  <tr>
-        <td><strong>Paises</strong></td>
-		<td><strong>Generación (Mwh)</strong></td>
-        <td><strong>Participación</strong></td>
+        <td><b>Paises</b></td>
+		<td><b>Generación (Mwh)</b></td>
+        <td><b>Participación</b></td>
       </tr>
       <tr>
         <td>China</td>
@@ -231,13 +232,13 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
   <hr>
   
-  <div class="w3-container">
+  <div class="w3-panel">
     <h5><strong>Gráfica</strong></h5>
     <ul class="w3-ul w3-card-4 w3-white">
       <li class="w3-padding-16">
-        <img src="imagenes/capacidadmundial.png" class=".w3-margin-right" style="width:630px;height:500px">
+        <img src="imagenes/capacidadmundial.png" class="w3-left" style="width:630px;height:500px">
 		<div class="w3-medium w3-panel w3-margin-right">
-		<p>Corresponde al potencial eólico instalado en el mundo hasta el 2017, cifras publicadas por la Global Wind Energy Council (GWEC ).</p>
+		<p>Corresponde al potencial eólico instalado en el mundo hasta el 2017, cifras publicadas por Global Wind Energy Council (GWEC ).</p>
 		</div>
       </li>
     </ul>
@@ -255,11 +256,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p>Especialista en SIG, Catastro, Cartografía y Tutor de cursos en línea.</p><br>
       </div>
 	  <div class="w3-col s8 w3-bar">
-      <span><strong>Mis contactos</strong></span><br>
-      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i></a>
-      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook"></i></a>
-      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-github"></i></a>
-	  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
+      <span><b>Mis redes sociales</b></span><br>
+        <a href="#" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-twitter"></i></a>
+        <a href="https://github.com/jeviloriar/" target="_blank"class="w3-bar-item w3-button"><i class="fa fa-github"></i></a>
+	    <a href="#" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-linkedin"></i></a>
     </div>
     </div>
   </div><br>
@@ -269,8 +269,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	<h3>Curso: Geodatos en aplicaciones web</h3>
       <div class="w3-container w3-third">
         <h5 class="w3-bottombar w3-border-green">Colaboradores</h5>
-        <p>Geoinnova</p>
-        <p>International Renewable Energy Agency </p>
+        <a href="https://geoinnova.org" target="_blank" <p>Geoinnova</p></a>
+        <p>International Renewable Energy Agency</p>
 		<p>SolarisGis</p>
       </div>
       <div class="w3-container w3-third">
