--- a/html/solar.html
+++ b/html/solar.html
@@ -219,7 +219,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <span><b>Mis redes sociales</b></span><br>
         <a href="#" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-twitter"></i></a>
         <a href="https://github.com/jeviloriar/" target="_blank"class="w3-bar-item w3-button"><i class="fa fa-github"></i></a>
-	    <a href="#" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-linkedin"></i></a>
+	    <a href="https://www.linkedin.com/in/jorge-viloria-658013118/" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
       </div>
 	  </div>
     </div><br>
