--- a/html/solar.html
+++ b/html/solar.html
@@ -169,7 +169,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div><br>
     </div>
 	<div class="w3-medium w3-panel w3-margin-right">
-	  <p>Datos obtenidos de la aplicación web <a href "http://www.globalsolaratlas.info/" target="_blank">Atlas Global Solar</a>, mediciones correspondiente a la irradiación solar. Los datos poseen una resolución espacial de unos 30 segundos de arco de grado, el equivalente a 1 km aproximadamente. Las capas de datos proporcionadas incluyen el promedio anual a largo plazo de las siguientes variables:</p>
+	  <p>Datos obtenidos de la aplicación web <a href "//www.globalsolaratlas.info/" target="_blank">Atlas Global Solar</a>, mediciones correspondiente a la irradiación solar. Los datos poseen una resolución espacial de unos 30 segundos de arco de grado, el equivalente a 1 km aproximadamente. Las capas de datos proporcionadas incluyen el promedio anual a largo plazo de las siguientes variables:</p>
 	  <p>•	PVOUT - Potencial de energía fotovoltaica en unidades de medida kWh/kWp.</p>
       <p>•	GHI - Irradiación horizontal global en unidades de medida kWh/m2.</p>
       <p>•	DIF: irradiación horizontal difusa (kWh/m2).</p>
